--- a/views/tecBioq/clickAddDeterminacion.pug
+++ b/views/tecBioq/clickAddDeterminacion.pug
@@ -2,6 +2,7 @@ extends layout
 include ./formDeterminacion.pug
 append styles 
       link(rel='stylesheet', href='/stylesheets/tecBioq/formularios.css')
+      link(rel='stylesheet', href='/stylesheets/inputDataList.css')
 block content
  div.container.mt-5(id="divContentLista" )
    .row
